--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             color: rgb(90, 183, 202);  /*blue*/
 
             font-size: 14pt;
-            font-family: Consolas;
+            font-family: Consolas, Menlo, Courier;
         }
         #editor {
             border: solid #555 1px;
